examples/bench/bad/typing/generalize4.mlw

goal test : forall x:'a. x=1 
